<?xml version="1.0" encoding="UTF-8"?>
<!-- Parent pom for Stripes project. We use multiple module projects in order to avoid directory refactorings and thereby breaking of the currently used and build. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.sourceforge.stripes</groupId>
	<artifactId>stripes-parent</artifactId>
	<version>1.6.0</version>
	<packaging>pom</packaging>

	<modules>
		<module>stripes</module>
		<module>examples</module>
		<module>dist</module>
	</modules>

	<name>Stripes Parent</name>
	<url>https://stripesframework.org/</url>
	<description>Stripes web framework parent project.</description>

	<organization>
		<name>Stripes Framework</name>
		<url>https://www.stripesframework.org/</url>
	</organization>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/StripesFramework/stripes</url>
		<connection>scm:git:https://github.com/StripesFramework/stripes.git</connection>
		<developerConnection>scm:git:https://github.com/StripesFramework/stripes.git</developerConnection>
	</scm>

	<issueManagement>
		<system>JIRA</system>
		<url>https://stripesframework.org/jira/browse/STS</url>
	</issueManagement>

	<ciManagement>
		<system>Jenkins</system>
		<url>https://www.stripesframework.org/jenkins</url>
	</ciManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>jakarta.servlet</groupId>
				<artifactId>jakarta.servlet-api</artifactId>
				<version>6.0.0</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>jakarta.servlet.jsp</groupId>
				<artifactId>jakarta.servlet.jsp-api</artifactId>
				<version>3.1.1</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>jakarta.el</groupId>
				<artifactId>jakarta.el-api</artifactId>
				<version>5.0.1</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>jakarta.servlet.jsp.jstl</groupId>
				<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
				<version>3.0.0</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>jakarta-taglibs</groupId>
				<artifactId>standard</artifactId>
				<version>1.1.2</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>jakarta.mail</groupId>
				<artifactId>jakarta.mail-api</artifactId>
				<version>2.1.2</version>
				<scope>provided</scope>
				<optional>true</optional>
				<exclusions>
					<exclusion>
						<groupId>jakarta.activation</groupId>
						<artifactId>jakarta.activation-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
				<version>6.8.8</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging</artifactId>
				<version>1.1.3</version>
				<exclusions>
					<exclusion>
						<groupId>jakarta.servlet</groupId>
						<artifactId>jakarta.servlet-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
<!--			<dependency>-->
<!--				<groupId>org.apache.logging.log4j</groupId>-->
<!--				<artifactId>log4j-api</artifactId>-->
<!--				<version>2.22.0</version>-->
				<!-- define those exclusions otherwise we get annoying zip corruption errors -->
<!--				<exclusions>-->
<!--					<exclusion>-->
<!--						<artifactId>jms</artifactId>-->
<!--						<groupId>jakarta.jms</groupId>-->
<!--					</exclusion>-->
<!--					<exclusion>-->
<!--						<artifactId>jmxtools</artifactId>-->
<!--						<groupId>com.sun.jdmk</groupId>-->
<!--					</exclusion>-->
<!--					<exclusion>-->
<!--						<artifactId>jmxri</artifactId>-->
<!--						<groupId>com.sun.jmx</groupId>-->
<!--					</exclusion>-->
<!--				</exclusions>-->
<!--			</dependency>-->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>6.0.11</version>
				<scope>provided</scope>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>6.0.11</version>
				<scope>provided</scope>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>6.0.11</version>
				<scope>provided</scope>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-fileupload2-jakarta</artifactId>
				<version>2.0.0-M1</version>
				<scope>provided</scope>
				<optional>true</optional>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<source>17</source>
						<target>17</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.1.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.6.0</version>
				</plugin>
				<plugin>
					<groupId>net.sourceforge.maven-taglib</groupId>
					<artifactId>maven-taglib-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.tomcat.maven</groupId>
					<artifactId>tomcat7-maven-plugin</artifactId>
					<version>2.2</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.gmaven</groupId>
					<artifactId>gmaven-plugin</artifactId>
					<version>1.5</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.cargo</groupId>
					<artifactId>cargo-maven2-plugin</artifactId>
					<version>1.9.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.5.0</version>
					<executions>
						<execution>
							<id>generate-javadoc</id>
							<phase>package</phase>
							<goals>
								<goal>jar</goal>
							</goals>
							<configuration>
								<overview>${basedir}/src/main/resources/overview.html</overview>
								<bottom>© Copyright 2005-2023, Stripes Development Team.</bottom>
								<author>true</author>
								<use>true</use>
								<version>true</version>
								<links>
									<link>https://docs.oracle.com/en/java/javase/17/docs/api/</link>
									<link>https://jakarta.ee/specifications/servlet/5.0/apidocs/</link>
									<link>https://docs.spring.io/spring-framework/docs/6.1.0/javadoc-api/</link>
									<link>https://jakarta.ee/specifications/expression-language/4.0/apidocs/</link>
								</links>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>cobertura-maven-plugin</artifactId>
					<version>2.6</version>
					<configuration>
						<formats>
							<format>html</format>
							<format>xml</format>
						</formats>
						<check/>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>webtests</id>
			<modules>
				<module>webtests</module>
			</modules>
		</profile>
	</profiles>
</project>
